# text2sql

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  connections.docker.yaml  connections.example.yaml  docker-compose.yml  gateway.example.yaml  policies.yaml  pyproject.toml  进度快照.md  项目设计书.md
.github/workflows/: ci.yml
docker/: entrypoint.sh
eval/: datasets.py  metrics.py  mini_eval.json  run_eval.py
scripts/: ask.py  audit_report.py  auto_finetune.py  export_training_data.py  finetune_config.yaml  make_sample_db.py  prepare_spider.py  seed_postgres.py  serve.py  show_schema_doc.py  smoke_db.py  smoke_llm.py  trace_report.py
semantics/: shop_pg.yaml
src/text2sql/: __init__.py  agent.py  analyst.py  api.py  cache.py  config.py  db.py  embeddings.py  engine.py  examples.py  feedback.py  governance.py  guard.py  llm.py  models.py  pins.py  pricing.py  prompts.py  retriever.py  schema.py  schema_index.py  semantics.py  service.py  sources.py  tracing.py
src/text2sql/gateway/: __init__.py  breaker.py  gateway.py  limiter.py  models.py  providers.py  router.py
src/text2sql/web/: index.html
tests/: conftest.py  test_agent_parse.py  test_api_monitoring.py  test_cache.py  test_correction.py  test_db.py  test_feedback.py  test_fewshot.py  test_gateway_breaker.py  test_gateway_failover.py  test_gateway_limiter.py  test_gateway_providers.py  test_gateway_router.py  test_governance.py  test_guard.py  test_metrics.py  test_pins.py  test_pricing.py  test_reliability.py  test_retriever.py  test_semantics.py  test_service.py  test_sources.py
