[project]
name = "text2sql-agent"
version = "0.1.0"
description = "A conversational data-analysis Copilot for non-technical users: ask in plain language, get an answer + insight + chart (SQL optional and auditable). Schema retrieval, self-correction, a semantic layer, data governance (RLS / column ACL / PII masking), and a feedback flywheel — all measured on the Spider benchmark."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "flying114514" }]
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "sqlglot>=25.0.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.12",
    "langfuse>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "huggingface-hub>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.urls]
Repository = "https://github.com/flying114514/text2sql-agent"
Issues = "https://github.com/flying114514/text2sql-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Lint/format the source plus the supporting trees, but never the data dumps.
src = ["src", "tests", "eval", "scripts"]
extend-exclude = ["data", "web"]

[tool.ruff.lint]
# E/W pycodestyle · F pyflakes · I import-sort · UP pyupgrade · B bugbear · C4 comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]
# Line length is enforced by the formatter; CJK comments make the lint check noisy.
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["text2sql"]
